se modifico responsive 2

--- a/style.css
+++ b/style.css
@@ -523,6 +523,7 @@ button:hover {
     }
     .carousel-item img{
         width: 150px;
+        height: 150px;
         border: 2px solid black;
     }
 
