--- a/style.css
+++ b/style.css
@@ -117,6 +117,37 @@ html{
     top: -100px;
     transform: translateX(-50%);
 }
+/*PORQUE ELEGI ESTE CAMINO*/
+.titulo-seccion{
+    font-family: "Yellowtail";
+    font-size: 1.5rem;
+}
+/*SECCION SOBRE MI min */
+.sobremicamino{
+    background-color: rgb(97, 6, 97);
+    padding: 140px 0 100px 0;
+    text-align: center;
+}
+.sobremicamino .contenido-seccion2{
+    max-width: 1000px;
+    margin: auto;
+    padding: 0 10px;
+}
+.sobremicamino .contenido-seccion2 h3{
+    text-transform: uppercase;
+    font-size: 30px;
+}
+.sobremicamino .contenido-seccion2 .especial2{
+    color: #f5f1f3;
+    font-weight: bold;
+    margin-top: 15px;
+}
+.sobremicamino .contenido-seccion2 p{
+    max-width: 900px;
+    margin: auto;
+    color: #c0bebe;
+    justify-content: center;
+}
 /*estilos generales*/
 .titulo-seccion{
     font-family: "Yellowtail";
