--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html{
 /*Seccion inicio*/
 .inicio{
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/fototarot1.jpg");
+    url("img/imgTarot6.jpg");
     background-size: cover;
     background-position: center center;
     color: #f3efef;
@@ -205,7 +205,7 @@ html{
     padding: 150px 0 150px 0;
     text-align: center;
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/fototarot2.jpg");
+    url("img/imgTarot3.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -248,7 +248,7 @@ html{
 /* SECCION RESUMEN*/
 
 .resumen{
-    background-color: #e6e6e6;
+    background-color: black;
     padding: 140px 0 100px 0;
     text-align: center;
 }
@@ -411,7 +411,7 @@ button:hover {
 }
 
 .sobremi2{
-    background-image:url(./img/fototarot3.jpg);
+    background-image:url(./img/imgTarot5.jpg);
     padding: 140px 0 100px 0;
     text-align: center;
     background-size: cover;
