--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ html{
 .sobremicamino .contenido-seccion2 h3{
     text-transform: uppercase;
     font-size: 30px;
+    color: white;
 }
 .sobremicamino .contenido-seccion2 .especial2{
     color: #f5f1f3;
@@ -164,7 +165,8 @@ html{
 /*estilos generales*/
 .titulo-seccion{
     font-family: "Yellowtail";
-    font-size: 1.5rem;
+    font-size: 50px;
+    color: white;
 }
 
 /*SECCION SOBRE MI min */
@@ -177,6 +179,12 @@ html{
     max-width: 1000px;
     margin: auto;
     padding: 0 10px;
+}
+.sobremi .contenido-seccion .titulo-seccion-servicios .especial{
+    max-width: 50%;
+    text-align: center;
+    border-radius: 10%;
+
 }
 .sobremi .contenido-seccion h3{
     text-transform: uppercase;
@@ -451,10 +459,15 @@ button:hover {
 .sobremi2 .contenido-seccion2 h3{
     text-transform: uppercase;
     font-size: 30px;
-    border: 3px solid black;
-    background-color: #dc07f8;
-    max-width: 1000px;
-
+    max-width: 100%;
+    color: white;
+    background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
+    url("img/imgTarot3.jpg");
+    padding: 140px 0 100px 0;
+    text-align: center;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
 .sobremi2 .contenido-seccion2 .especial2{
     color: #830294;
