--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ html{
     padding: 250px 0 250px 0;
     text-align: center;
     background: linear-gradient(rgba(0,0,0,.3), rgba(0,0,0,.3)),
-    url("img/imgTarot5.jpg");
+    url("img/ojoColores.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
